--- a/puzzles/style-static.css
+++ b/puzzles/style-static.css
@@ -26,7 +26,6 @@
   z-index: 100;
   text-align: center;
   font-size: 20px;
-  font-weight: bold;
   text-transform: uppercase;
 }
 .crossword-board__item:active, .crossword-board__item:focus {
@@ -134,4 +133,12 @@
   display: inline-block;
   background: #9AFF67;
   cursor: pointer;
+}
+
+#item3-6, #item3-7, #item3-8, #item3-9,
+#item5-7, #item5-8, #item5-9, #item5-10, #item5-11, #item5-12, #item5-13,
+#item8-8, #item8-9, #item8-10, #item8-11, #item8-12, #item8-13, #item8-14, #item8-15,
+#item11-7, #item11-8, #item11-9, #item11-10, #item11-11, #item11-12, #item11-13, #item11-14, #item11-15 {
+  border-radius: 100%;
+  behavior: url(PIE.htc);
 }
